--- a/index.html
+++ b/index.html
@@ -30,142 +30,72 @@
 
 		<h2>My Skills (so far)</h2>
 
-		<div class="slider">
-			<div class="slider-track odd">
-				<div class="slide">
-					<img src="assets/images/Sliders/Languages/Java.png" alt="Java icon">
+		<div id="skills-slider">
+			<div class="cards-wrapper">
+				<div class="card">
+					<h2 class="title">Java</h2>
+					<img src="./assets/images/Cards-icons/Java.png" alt="">
+					<h5 class="experience">Experience: 4 years, primary programming language</h5>
 				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/Languages/JS.png" alt="JS icon">
+				<div class="card">
+					<h2 class="title">JavaScript</h2>
+					<img src="./assets/images/Cards-icons/JS.png" alt="">
+					<h5 class="experience">Experience: Used in projects, solid understanding of core concepts</h5>
 				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/Languages/Python.png" alt="Python icon">
+				<div class="card">
+					<h2 class="title">Python</h2>
+					<img src="./assets/images/Cards-icons/Python.png" alt="">
+					<h5 class="experience">Experience: Utilized for automation tasks, basic experience</h5>
 				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/Languages/Java.png" alt="Java icon">
+				<div class="card">
+					<h2 class="title">PostgreSQL</h2>
+					<img src="./assets/images/Cards-icons/Postgre.png" alt="">
+					<h5 class="experience">Experience: Used in Spring Boot projects, proficient in joins and subqueries</h5>
 				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/Languages/JS.png" alt="JS icon">
+				<div class="card">
+					<h2 class="title">MySQL</h2>
+					<img src="./assets/images/Cards-icons/Mysql.png" alt="">
+					<h5 class="experience">Experience: Similar knowledge as PostgreSQL, mainly used in academic settings</h5>
 				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/Languages/Python.png" alt="Python icon">
+				<div class="card">
+					<h2 class="title">Spring</h2>
+					<img src="./assets/images/Cards-icons/Spring.png" alt="">
+					<h5 class="experience">Experience: Familiar with fundamentals necessary for Spring Boot</h5>
 				</div>
-			</div>
-		</div>
-
-		<div class="slider">
-			<div class="slider-track even">
-				<div class="slide">
-					<img src="assets/images/Sliders/Databases/Postgre.png" alt="Postgres icon">
+				<div class="card">
+					<h2 class="title">Spring Boot</h2>
+					<img src="./assets/images/Cards-icons/Spring-Boot.png" alt="">
+					<h5 class="experience">Experience: Knowledge of core concepts, planning to use in upcoming projects</h5>
 				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/Databases/Mysql.png" alt="Mysql icon">
+				<div class="card">
+					<h2 class="title">Flask</h2>
+					<img src="./assets/images/Cards-icons/Flask.png" alt="">
+					<h5 class="experience">Experience: Used for setting up simple backend solutions efficiently</h5>
 				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/Databases/Postgre.png" alt="Postgres icon">
+				<div class="card">
+					<h2 class="title">RESTful API</h2>
+					<img src="./assets/images/Cards-icons/Rest.png" alt="">
+					<h5 class="experience">Experience: Developed APIs using Spring Boot</h5>
 				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/Databases/Postgre.png" alt="Postgres icon">
+				<div class="card">
+					<h2 class="title">JSON</h2>
+					<img src="./assets/images/Cards-icons/JSON.png" alt="">
+					<h5 class="experience">Experience: 1 year, used in APIs and file storage</h5>
 				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/Databases/Mysql.png" alt="Mysql icon">
+				<div class="card">
+					<h2 class="title">CSS</h2>
+					<img src="./assets/images/Cards-icons/Css.png" alt="">
+					<h5 class="experience">Experience: 2 years, capable of styling full websites, but prefer backend development</h5>
 				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/Databases/Postgre.png" alt="Postgres icon">
+				<div class="card">
+					<h2 class="title">Git</h2>
+					<img src="./assets/images/Cards-icons/Git.png" alt="">
+					<h5 class="experience">Experience: Proficient in pushing and managing projects on GitHub</h5>
 				</div>
-			</div>
-		</div>
-
-		<div class="slider">
-			<div class="slider-track odd">
-				<div class="slide">
-					<img src="assets/images/Sliders/Frameworks/Spring-Boot.png" alt="Spring-Boot icon">
-				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/Frameworks/Flask.png" alt="Flask icon">
-				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/Frameworks/Spring.png" alt="Spring icon">
-				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/Frameworks/Spring-Boot.png" alt="Spring-Boot icon">
-				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/Frameworks/Flask.png" alt="Flask icon">
-				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/Frameworks/Spring.png" alt="Spring icon">
-				</div>
-			</div>
-		</div>
-
-		<div class="slider">
-			<div class="slider-track even">
-				<div class="slide">
-					<img src="assets/images/Sliders/APIs/JSON.png" alt="JSON icon">
-				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/APIs/Rest.png" alt="Rest icon">
-				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/APIs/JSON.png" alt="JS icon">
-				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/APIs/JSON.png" alt="JSON icon">
-				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/APIs/Rest.png" alt="Rest icon">
-				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/APIs/JSON.png" alt="JSON icon">
-				</div>
-			</div>
-		</div>
-
-		<div class="slider">
-			<div class="slider-track odd">
-				<div class="slide">
-					<img src="assets/images/Sliders/VSCs/Github.png" alt="Github icon">
-				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/VSCs/Git.png" alt="Git icon">
-				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/VSCs/Github.png" alt="Github icon">
-				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/VSCs/Github.png" alt="Github icon">
-				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/VSCs/Git.png" alt="Git icon">
-				</div>
-
-				<div class="slide">
-					<img src="assets/images/Sliders/VSCs/Github.png" alt="Github icon">
+				<div class="card">
+					<h2 class="title">GitHub</h2>
+					<img src="./assets/images/Cards-icons/Github.png" alt="">
+					<h5 class="experience">Experience: A few months, used for both personal and collaborative projects</h5>
 				</div>
 			</div>
 		</div>
@@ -212,6 +142,7 @@
 		</address>
 	</footer>
 
+    <script src="./assets/js/Classes/CardsSlider.js"></script>
 	<script src="./assets/js/index.js"></script>
 </body>
 </html>
