Update age display format and remove debug log
Updated the age text to include "year-old" in the display format for better readability. Also, removed an unnecessary console log statement to clean up the code.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<main>
 		<h1>Hello!</h1>
 		<p>
-			My name is Dawid, and I am a <span id="age"></span>-year-old backend developer (maybe one day I will be fullstack who knows) passionate about building modern, secure applications.
+			My name is Dawid, and I am a <span id="age">(Loading..)</span> backend developer (maybe one day I will be fullstack who knows) passionate about building modern, secure applications.
 			My primary programming language is Java,
 			and I enjoy working with databases and backend technologies, especially Spring. <br><br>
 
