--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8" lang="en"/>
 	<title>Dayfit's About Me</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -32,6 +33,8 @@
 		</p>
 
 		<h2>My Skills (so far)</h2>
+
+		<div class="triangle"></div>
 
 		<div id="skills-slider">
 			<div class="cards-wrapper">
@@ -72,17 +75,17 @@
 				</div>
 				<div class="card">
 					<h2 class="title">Flask</h2>
-					<img src="./assets/images/Cards-icons/Flask.png" alt="">
+					<img src="./assets/images/Cards-icons/Flask.png" alt="" class="dark">
 					<h5 class="experience">Experience: Used for setting up simple backend solutions efficiently</h5>
 				</div>
 				<div class="card">
 					<h2 class="title">RESTful API</h2>
-					<img src="./assets/images/Cards-icons/Rest.png" alt="">
+					<img src="./assets/images/Cards-icons/Rest.png" alt="" class="dark">
 					<h5 class="experience">Experience: Developed APIs using Spring Boot</h5>
 				</div>
 				<div class="card">
 					<h2 class="title">JSON</h2>
-					<img src="./assets/images/Cards-icons/JSON.png" alt="">
+					<img src="./assets/images/Cards-icons/JSON.png" alt="" class="dark">
 					<h5 class="experience">Experience: 1 year, used in APIs and file storage</h5>
 				</div>
 				<div class="card">
@@ -97,11 +100,13 @@
 				</div>
 				<div class="card">
 					<h2 class="title">GitHub</h2>
-					<img src="./assets/images/Cards-icons/Github.png" alt="">
+					<img src="./assets/images/Cards-icons/Github.png" alt="" class="dark">
 					<h5 class="experience">Experience: A few months, used for both personal and collaborative projects</h5>
 				</div>
 			</div>
 		</div>
+
+		<div class="triangle reverse"></div>
 
 		<h2>My Projects</h2>
 		<p>
@@ -132,7 +137,7 @@
 			<a href="https://www.github.com/Day-fit" target="_blank">
 				<div class="contact-link">
 
-					<img src="assets/images/Contact-icons/Github.png" alt="Click to visit my github profile">
+					<img src="assets/images/Contact-icons/Github.png" alt="Click to visit my github profile" class="dark">
 					<p class="copied-text">Click to visit</p>
 
 				</div>
