Add typing and blinking animations to greeter text
Wrapped the greeter text in a div and applied CSS animations for typing and blinking effects. Improved the card positioning by replacing `left` with a `transform` property. Adjustments enhance user interaction and maintain consistent design.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     </header>
 
 	<main>
-		<h1>Hello!</h1>
+		<div>
+			<h1 id="greeter">Hello!</h1>
+		</div>
 		<p>
 			My name is Dawid,
 			and I am a <span id="age">(Loading ...)</span> backend developer
