Add WebP image support and navigation dots for slider
Implemented WebP images for better optimization and added `<picture>` tags to load appropriate formats. Enhanced the skills slider with new navigation dots for better user experience and improved CSS styles for responsiveness.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8" lang="en"/>
+	<meta http-equiv="Cache-Control" content="max-age=31536000, must-revalidate">
 	<title>Dayfit's About Me</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -42,69 +43,109 @@
 			<div class="cards-wrapper">
 				<div class="card">
 					<h2 class="title">Java</h2>
-					<img src="./assets/images/Cards-icons/Java.png" alt="">
+					<picture>
+						<source srcset="./assets/images/Cards-icons/webp/Java.webp" type="image/webp">
+						<img src="./assets/images/Cards-icons/Java.png" alt="Java logo icon">
+					</picture>
 					<h5 class="experience">Experience: 4 years, primary programming language</h5>
 				</div>
 				<div class="card">
 					<h2 class="title">JavaScript</h2>
-					<img src="./assets/images/Cards-icons/JS.png" alt="">
+					<picture>
+						<source srcset="./assets/images/Cards-icons/webp/JS.webp" type="image/webp">
+						<img src="./assets/images/Cards-icons/JS.png" alt="JS logo icon">
+					</picture>
 					<h5 class="experience">Experience: Used in projects, solid understanding of core concepts</h5>
 				</div>
 				<div class="card">
 					<h2 class="title">Python</h2>
-					<img src="./assets/images/Cards-icons/Python.png" alt="">
+					<picture>
+						<source srcset="./assets/images/Cards-icons/webp/Python.webp" type="image/webp">
+						<img src="./assets/images/Cards-icons/Python.png" alt="Python logo icon">
+					</picture>
 					<h5 class="experience">Experience: Utilized for automation tasks, basic experience</h5>
 				</div>
 				<div class="card">
 					<h2 class="title">PostgreSQL</h2>
-					<img src="./assets/images/Cards-icons/Postgre.png" alt="">
+					<picture>
+						<source srcset="./assets/images/Cards-icons/webp/Postgre.webp" type="image/webp">
+						<img src="./assets/images/Cards-icons/Postgre.png" alt="Postgre logo icon">
+					</picture>
 					<h5 class="experience">Experience: Used in Spring Boot projects, proficient in joins and subqueries</h5>
 				</div>
 				<div class="card">
 					<h2 class="title">MySQL</h2>
-					<img src="./assets/images/Cards-icons/Mysql.png" alt="">
+					<picture>
+						<source srcset="./assets/images/Cards-icons/webp/Mysql.webp" type="image/webp">
+						<img src="./assets/images/Cards-icons/Mysql.png" alt="Mysql logo icon" loading="lazy">
+					</picture>
 					<h5 class="experience">Experience: Similar knowledge as PostgreSQL, mainly used in academic settings</h5>
 				</div>
 				<div class="card">
 					<h2 class="title">Spring</h2>
-					<img src="./assets/images/Cards-icons/Spring.png" alt="">
+					<picture>
+						<source srcset="./assets/images/Cards-icons/webp/Spring.webp" type="image/webp">
+						<img src="./assets/images/Cards-icons/Spring.png" alt="Spring logo icon" loading="lazy">
+					</picture>
 					<h5 class="experience">Experience: Familiar with fundamentals necessary for Spring Boot</h5>
 				</div>
 				<div class="card">
 					<h2 class="title">Spring Boot</h2>
-					<img src="./assets/images/Cards-icons/Spring-Boot.png" alt="">
+					<picture>
+						<source srcset="./assets/images/Cards-icons/webp/Spring-Boot.webp" type="image/webp">
+						<img src="./assets/images/Cards-icons/Spring-Boot.png" alt="Spring-boot logo icon" loading="lazy">
+					</picture>
 					<h5 class="experience">Experience: Knowledge of core concepts, planning to use in upcoming projects</h5>
 				</div>
 				<div class="card">
 					<h2 class="title">Flask</h2>
-					<img src="./assets/images/Cards-icons/Flask.png" alt="" class="dark">
+					<picture>
+						<source srcset="./assets/images/Cards-icons/webp/Flask.webp" type="image/webp">
+						<img src="./assets/images/Cards-icons/Flask.png" alt="Flask logo icon" class="dark" loading="lazy">
+					</picture>
 					<h5 class="experience">Experience: Used for setting up simple backend solutions efficiently</h5>
 				</div>
 				<div class="card">
 					<h2 class="title">RESTful API</h2>
-					<img src="./assets/images/Cards-icons/Rest.png" alt="" class="dark">
+					<picture>
+						<source srcset="./assets/images/Cards-icons/webp/Rest.webp" type="image/webp">
+						<img src="./assets/images/Cards-icons/Rest.png" alt="Rest logo icon" class="dark" loading="lazy">
+					</picture>
 					<h5 class="experience">Experience: Developed APIs using Spring Boot</h5>
 				</div>
 				<div class="card">
 					<h2 class="title">JSON</h2>
-					<img src="./assets/images/Cards-icons/JSON.png" alt="" class="dark">
+					<picture>
+						<source srcset="./assets/images/Cards-icons/webp/JSON.webp" type="image/webp">
+						<img src="./assets/images/Cards-icons/JSON.png" alt="JSON logo icon" class="dark" loading="lazy">
+					</picture>
 					<h5 class="experience">Experience: 1 year, used in APIs and file storage</h5>
 				</div>
 				<div class="card">
 					<h2 class="title">CSS</h2>
-					<img src="./assets/images/Cards-icons/Css.png" alt="">
+					<picture>
+						<source srcset="./assets/images/Cards-icons/webp/Css.webp" type="image/webp">
+						<img src="./assets/images/Cards-icons/Css.png" alt="CSS logo icon" loading="lazy">
+					</picture>
 					<h5 class="experience">Experience: 2 years, capable of styling full websites, but prefer backend development</h5>
 				</div>
 				<div class="card">
 					<h2 class="title">Git</h2>
-					<img src="./assets/images/Cards-icons/Git.png" alt="">
+					<picture>
+						<source srcset="./assets/images/Cards-icons/webp/Git.webp" type="image/webp">
+						<img src="./assets/images/Cards-icons/Git.png" alt="Git logo icon" loading="lazy">
+					</picture>
 					<h5 class="experience">Experience: Proficient in pushing and managing projects on GitHub</h5>
 				</div>
 				<div class="card">
 					<h2 class="title">GitHub</h2>
-					<img src="./assets/images/Cards-icons/Github.png" alt="" class="dark">
+					<picture>
+						<source srcset="./assets/images/Cards-icons/webp/Github.webp" type="image/webp">
+						<img src="./assets/images/Cards-icons/Github.png" alt="Github logo icon" class="dark" loading="lazy">
+					</picture>
 					<h5 class="experience">Experience: A few months, used for both personal and collaborative projects</h5>
 				</div>
+
 			</div>
 		</div>
 
@@ -123,15 +164,15 @@
 
 		<address>
 			<div class="contact-link copy-click" data-to-copy=".dayfit">
-				<img src="assets/images/Contact-icons/Discord_icon.png" alt="Click to copy my discord username">
+				<img src="assets/images/Contact-icons/Discord_icon.png" alt="Click to copy my discord username" loading="lazy">
 				<p class="copied-text">Click to copy</p>
 			</div>
 
 			<a href="https://www.linkedin.com/in/dawid-socha-66193a34b/" target="_blank">
 				<div class="contact-link">
 
-					<img src="assets/images/Contact-icons/Linkedin-icon.png" alt="Click to visit my linked-in profile">
-					<p class="copied-text">Click to visit</p>
+					<img src="assets/images/Contact-icons/Linkedin-icon.png" alt="Click to visit my linked-in profile" loading="lazy">
+					<p class="copied-text">LinkedIn</p>
 
 				</div>
 			</a>
@@ -139,14 +180,14 @@
 			<a href="https://www.github.com/Day-fit" target="_blank">
 				<div class="contact-link">
 
-					<img src="assets/images/Contact-icons/Github.png" alt="Click to visit my github profile" class="dark">
-					<p class="copied-text">Click to visit</p>
+					<img src="assets/images/Contact-icons/Github.png" alt="Click to visit my github profile" class="dark" loading="lazy">
+					<p class="copied-text">Github</p>
 
 				</div>
 			</a>
 
 			<div class="contact-link copy-click" data-to-copy="dawid.socha02@gmail.com">
-                <img src="assets/images/Contact-icons/Gmail_icon.png" alt="Click to copy my email address">
+                <img src="assets/images/Contact-icons/Gmail_icon.png" alt="Click to copy my email address" loading="lazy">
 				<p class="copied-text">Click to copy</p>
             </div>
 		</address>
