Enhance card loading experience and add click functionality for repository links

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 		<div id="skills-showcase" class="skills-slider">
 			<div class="cards-wrapper">
-				<div class="card">
+				<div class="card loading">
 					<h2 class="title">Java</h2>
 					<picture>
 						<source srcset="./assets/images/Cards-icons/webp/Java.webp" type="image/webp">
@@ -49,7 +49,7 @@
 					</picture>
 					<h5 class="experience">Experience: 4 years, primary programming language</h5>
 				</div>
-				<div class="card">
+				<div class="card loading">
 					<h2 class="title">JavaScript</h2>
 					<picture>
 						<source srcset="./assets/images/Cards-icons/webp/JS.webp" type="image/webp">
@@ -57,7 +57,7 @@
 					</picture>
 					<h5 class="experience">Experience: Used in projects, solid understanding of core concepts</h5>
 				</div>
-				<div class="card">
+				<div class="card loading">
 					<h2 class="title">Python</h2>
 					<picture>
 						<source srcset="./assets/images/Cards-icons/webp/Python.webp" type="image/webp">
@@ -65,7 +65,7 @@
 					</picture>
 					<h5 class="experience">Experience: Utilized for automation tasks, basic experience</h5>
 				</div>
-				<div class="card">
+				<div class="card loading">
 					<h2 class="title">PostgreSQL</h2>
 					<picture>
 						<source srcset="./assets/images/Cards-icons/webp/Postgre.webp" type="image/webp">
@@ -73,7 +73,7 @@
 					</picture>
 					<h5 class="experience">Experience: Used in Spring Boot projects, proficient in joins and subqueries</h5>
 				</div>
-				<div class="card">
+				<div class="card loading">
 					<h2 class="title">MySQL</h2>
 					<picture>
 						<source srcset="./assets/images/Cards-icons/webp/Mysql.webp" type="image/webp">
@@ -81,7 +81,7 @@
 					</picture>
 					<h5 class="experience">Experience: Similar knowledge as PostgreSQL, mainly used in academic settings</h5>
 				</div>
-				<div class="card">
+				<div class="card loading">
 					<h2 class="title">Spring</h2>
 					<picture>
 						<source srcset="./assets/images/Cards-icons/webp/Spring.webp" type="image/webp">
@@ -89,7 +89,7 @@
 					</picture>
 					<h5 class="experience">Experience: Familiar with fundamentals necessary for Spring Boot</h5>
 				</div>
-				<div class="card">
+				<div class="card loading">
 					<h2 class="title">Spring Boot</h2>
 					<picture>
 						<source srcset="./assets/images/Cards-icons/webp/Spring-Boot.webp" type="image/webp">
@@ -97,7 +97,7 @@
 					</picture>
 					<h5 class="experience">Experience: Knowledge of core concepts, planning to use in upcoming projects</h5>
 				</div>
-				<div class="card">
+				<div class="card loading">
 					<h2 class="title">Flask</h2>
 					<picture class="dark">
 						<source srcset="./assets/images/Cards-icons/webp/Flask.webp" type="image/webp">
@@ -105,7 +105,7 @@
 					</picture>
 					<h5 class="experience">Experience: Used for setting up simple backend solutions efficiently</h5>
 				</div>
-				<div class="card">
+				<div class="card loading">
 					<h2 class="title">RESTful API</h2>
 					<picture class="dark">
 						<source srcset="./assets/images/Cards-icons/webp/Rest.webp" type="image/webp">
@@ -113,7 +113,7 @@
 					</picture>
 					<h5 class="experience">Experience: Developed APIs using Spring Boot</h5>
 				</div>
-				<div class="card">
+				<div class="card loading">
 					<h2 class="title">JSON</h2>
 					<picture class="dark">
 						<source srcset="./assets/images/Cards-icons/webp/JSON.webp" type="image/webp">
@@ -121,7 +121,7 @@
 					</picture>
 					<h5 class="experience">Experience: 1 year, used in APIs and file storage</h5>
 				</div>
-				<div class="card">
+				<div class="card loading">
 					<h2 class="title">CSS</h2>
 					<picture>
 						<source srcset="./assets/images/Cards-icons/webp/Css.webp" type="image/webp">
@@ -129,7 +129,7 @@
 					</picture>
 					<h5 class="experience">Experience: 2 years, capable of styling full websites, but prefer backend development</h5>
 				</div>
-				<div class="card">
+				<div class="card loading">
 					<h2 class="title">Git</h2>
 					<picture>
 						<source srcset="./assets/images/Cards-icons/webp/Git.webp" type="image/webp">
@@ -137,7 +137,7 @@
 					</picture>
 					<h5 class="experience">Experience: Proficient in pushing and managing projects on GitHub</h5>
 				</div>
-				<div class="card">
+				<div class="card loading">
 					<h2 class="title">GitHub</h2>
 					<picture class="dark">
 						<source srcset="./assets/images/Cards-icons/webp/Github.webp" type="image/webp">
