Update .gitignore and enhance project display logic in index.html and index.js

--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
 			</div>
 		</div>
 
-		<div class="triangle reverse"></div>
-
 		<h2>My Projects</h2>
 		<p id="projects-text">
 			Coming Soon! <br>
 			Stay Tuned
 		</p>
+
+		<div id="hidden-triangle" class="triangle" style="display: none"></div>
 
 		<div id="projects-slider" class="skills-slider">
 
