--- a/index.html
+++ b/index.html
@@ -4,35 +4,28 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8" lang="en"/>
 	<meta http-equiv="Cache-Control" content="max-age=31536000, must-revalidate">
 	<title>Dayfit's About Me</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+	<link rel="stylesheet" href="./assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
-<body>
-    <header>
+	<body>
+	<header>
 		<div id="main-header">
 			<h1>About Me</h1>
 			<p>Dawid Socha</p>
 		</div>
 
-	    <div id="others-header">
-		    <h3>Light Mode:</h3>
-		    <div id="change-theme"></div>
-	    </div>
-    </header>
+		<div id="others-header">
+			<h3>Light Mode:</h3>
+			<div id="change-theme"></div>
+		</div>
+	</header>
 
 	<main>
 		<div>
 			<h1 id="greeter">Hello!</h1>
 		</div>
 		<p>
-			My name is Dawid,
-			and I am a <span id="age">(Loading ...)</span> backend developer
-			(maybe one day I will be fullstack who knows) passionate about building modern,
-			secure applications.
-			My primary programming language is Java,
-			and I enjoy working with databases and backend technologies, especially Spring. <br><br>
-
-			I am constantly learning and improving my skills.
+			My name is Dawid, and I am a <span id="age"></span> backend developer focused on building secure, scalable applications. I specialize in Java, Spring, Spring-boot, and I work extensively with relational databases. I continuously improve my skills.
 		</p>
 
 		<h2>My Skills (so far)</h2>
@@ -47,47 +40,7 @@
 						<source srcset="./assets/images/Cards-icons/webp/Java.webp" type="image/webp">
 						<img src="./assets/images/Cards-icons/Java.png" alt="Java logo icon">
 					</picture>
-					<h5 class="experience">Experience: 4 years, primary programming language</h5>
-				</div>
-				<div class="card loading">
-					<h2 class="title">JavaScript</h2>
-					<picture>
-						<source srcset="./assets/images/Cards-icons/webp/JS.webp" type="image/webp">
-						<img src="./assets/images/Cards-icons/JS.png" alt="JS logo icon">
-					</picture>
-					<h5 class="experience">Experience: Used in projects, solid understanding of core concepts</h5>
-				</div>
-				<div class="card loading">
-					<h2 class="title">Python</h2>
-					<picture>
-						<source srcset="./assets/images/Cards-icons/webp/Python.webp" type="image/webp">
-						<img src="./assets/images/Cards-icons/Python.png" alt="Python logo icon">
-					</picture>
-					<h5 class="experience">Experience: Utilized for automation tasks, basic experience</h5>
-				</div>
-				<div class="card loading">
-					<h2 class="title">PostgreSQL</h2>
-					<picture>
-						<source srcset="./assets/images/Cards-icons/webp/Postgre.webp" type="image/webp">
-						<img src="./assets/images/Cards-icons/Postgre.png" alt="Postgre logo icon">
-					</picture>
-					<h5 class="experience">Experience: Used in Spring Boot projects, proficient in joins and subqueries</h5>
-				</div>
-				<div class="card loading">
-					<h2 class="title">MySQL</h2>
-					<picture>
-						<source srcset="./assets/images/Cards-icons/webp/Mysql.webp" type="image/webp">
-						<img src="./assets/images/Cards-icons/Mysql.png" alt="Mysql logo icon" loading="lazy">
-					</picture>
-					<h5 class="experience">Experience: Similar knowledge as PostgreSQL, mainly used in academic settings</h5>
-				</div>
-				<div class="card loading">
-					<h2 class="title">Spring</h2>
-					<picture>
-						<source srcset="./assets/images/Cards-icons/webp/Spring.webp" type="image/webp">
-						<img src="./assets/images/Cards-icons/Spring.png" alt="Spring logo icon" loading="lazy">
-					</picture>
-					<h5 class="experience">Experience: Familiar with fundamentals necessary for Spring Boot</h5>
+					<h5 class="experience">4 years, primary language</h5>
 				</div>
 				<div class="card loading">
 					<h2 class="title">Spring Boot</h2>
@@ -95,15 +48,23 @@
 						<source srcset="./assets/images/Cards-icons/webp/Spring-Boot.webp" type="image/webp">
 						<img src="./assets/images/Cards-icons/Spring-Boot.png" alt="Spring-boot logo icon" loading="lazy">
 					</picture>
-					<h5 class="experience">Experience: Knowledge of core concepts, planning to use in upcoming projects</h5>
+					<h5 class="experience">Core concepts applied in scalable apps</h5>
 				</div>
 				<div class="card loading">
-					<h2 class="title">Flask</h2>
-					<picture class="dark">
-						<source srcset="./assets/images/Cards-icons/webp/Flask.webp" type="image/webp">
-						<img src="./assets/images/Cards-icons/Flask.png" alt="Flask logo icon" loading="lazy">
+					<h2 class="title">PostgreSQL</h2>
+					<picture>
+						<source srcset="./assets/images/Cards-icons/webp/Postgre.webp" type="image/webp">
+						<img src="./assets/images/Cards-icons/Postgre.png" alt="Postgre logo icon">
 					</picture>
-					<h5 class="experience">Experience: Used for setting up simple backend solutions efficiently</h5>
+					<h5 class="experience">Proficient in complex queries</h5>
+				</div>
+				<div class="card loading">
+					<h2 class="title">MySQL</h2>
+					<picture>
+						<source srcset="./assets/images/Cards-icons/webp/Mysql.webp" type="image/webp">
+						<img src="./assets/images/Cards-icons/Mysql.png" alt="Mysql logo icon" loading="lazy">
+					</picture>
+					<h5 class="experience">Experience from academic projects</h5>
 				</div>
 				<div class="card loading">
 					<h2 class="title">RESTful API</h2>
@@ -111,7 +72,39 @@
 						<source srcset="./assets/images/Cards-icons/webp/Rest.webp" type="image/webp">
 						<img src="./assets/images/Cards-icons/Rest.png" alt="Rest logo icon" loading="lazy">
 					</picture>
-					<h5 class="experience">Experience: Developed APIs using Spring Boot</h5>
+					<h5 class="experience">Developed APIs with Spring Boot</h5>
+				</div>
+				<div class="card loading">
+					<h2 class="title">Git & GitHub</h2>
+					<picture>
+						<source srcset="./assets/images/Cards-icons/webp/Git.webp" type="image/webp">
+						<img src="./assets/images/Cards-icons/Git.png" alt="Git logo icon" loading="lazy">
+					</picture>
+					<h5 class="experience">Version control and collaboration</h5>
+				</div>
+				<div class="card loading">
+					<h2 class="title">JavaScript</h2>
+					<picture>
+						<source srcset="./assets/images/Cards-icons/webp/JS.webp" type="image/webp">
+						<img src="./assets/images/Cards-icons/JS.png" alt="JS logo icon">
+					</picture>
+					<h5 class="experience">Used in projects with solid fundamentals</h5>
+				</div>
+				<div class="card loading">
+					<h2 class="title">Python</h2>
+					<picture>
+						<source srcset="./assets/images/Cards-icons/webp/Python.webp" type="image/webp">
+						<img src="./assets/images/Cards-icons/Python.png" alt="Python logo icon">
+					</picture>
+					<h5 class="experience">Basic experience, used for automation</h5>
+				</div>
+				<div class="card loading">
+					<h2 class="title">Flask</h2>
+					<picture class="dark">
+						<source srcset="./assets/images/Cards-icons/webp/Flask.webp" type="image/webp">
+						<img src="./assets/images/Cards-icons/Flask.png" alt="Flask logo icon" loading="lazy">
+					</picture>
+					<h5 class="experience">Simple backend solutions</h5>
 				</div>
 				<div class="card loading">
 					<h2 class="title">JSON</h2>
@@ -119,7 +112,7 @@
 						<source srcset="./assets/images/Cards-icons/webp/JSON.webp" type="image/webp">
 						<img src="./assets/images/Cards-icons/JSON.png" alt="JSON logo icon" loading="lazy">
 					</picture>
-					<h5 class="experience">Experience: 1 year, used in APIs and file storage</h5>
+					<h5 class="experience">Used for data exchange</h5>
 				</div>
 				<div class="card loading">
 					<h2 class="title">CSS</h2>
@@ -127,15 +120,7 @@
 						<source srcset="./assets/images/Cards-icons/webp/Css.webp" type="image/webp">
 						<img src="./assets/images/Cards-icons/Css.png" alt="CSS logo icon" loading="lazy">
 					</picture>
-					<h5 class="experience">Experience: 2 years, capable of styling full websites, but prefer backend development</h5>
-				</div>
-				<div class="card loading">
-					<h2 class="title">Git</h2>
-					<picture>
-						<source srcset="./assets/images/Cards-icons/webp/Git.webp" type="image/webp">
-						<img src="./assets/images/Cards-icons/Git.png" alt="Git logo icon" loading="lazy">
-					</picture>
-					<h5 class="experience">Experience: Proficient in pushing and managing projects on GitHub</h5>
+					<h5 class="experience">Styling websites, 2 years of experience</h5>
 				</div>
 				<div class="card loading">
 					<h2 class="title">GitHub</h2>
@@ -143,9 +128,8 @@
 						<source srcset="./assets/images/Cards-icons/webp/Github.webp" type="image/webp">
 						<img src="./assets/images/Cards-icons/Github.png" alt="Github logo icon" loading="lazy">
 					</picture>
-					<h5 class="experience">Experience: A few months, used for both personal and collaborative projects</h5>
+					<h5 class="experience">Personal and collaborative projects</h5>
 				</div>
-
 			</div>
 		</div>
 
@@ -163,42 +147,33 @@
 	</main>
 
 	<footer>
-
 		<h3>Find me here:</h3>
-
 		<address>
 			<div class="contact-link copy-click" data-to-copy=".dayfit">
 				<img src="assets/images/Contact-icons/Discord_icon.png" alt="Click to copy my discord username" loading="lazy">
 				<p class="copied-text">Click to copy</p>
 			</div>
-
 			<a href="https://www.linkedin.com/in/dawid-socha-66193a34b/" target="_blank">
 				<div class="contact-link">
-
 					<img src="assets/images/Contact-icons/Linkedin-icon.png" alt="Click to visit my linked-in profile" loading="lazy">
 					<p class="copied-text">LinkedIn</p>
-
 				</div>
 			</a>
-
 			<a href="https://www.github.com/Day-fit" target="_blank">
 				<div class="contact-link">
-
 					<img src="assets/images/Contact-icons/Github.png" alt="Click to visit my github profile" class="dark" loading="lazy">
 					<p class="copied-text">Github</p>
-
 				</div>
 			</a>
-
 			<div class="contact-link copy-click" data-to-copy="dawid.socha02@gmail.com">
-                <img src="assets/images/Contact-icons/Gmail_icon.png" alt="Click to copy my email address" loading="lazy">
+				<img src="assets/images/Contact-icons/Gmail_icon.png" alt="Click to copy my email address" loading="lazy">
 				<p class="copied-text">Click to copy</p>
-            </div>
+			</div>
 		</address>
 	</footer>
 
-    <script src="./assets/js/Classes/CardsSlider.js"></script>
-    <script src="assets/js/Classes/DynamicCardsGen.js"></script>
+	<script src="./assets/js/Classes/CardsSlider.js"></script>
+	<script src="assets/js/Classes/DynamicCardsGen.js"></script>
 	<script src="./assets/js/index.js"></script>
-</body>
+	</body>
 </html>
