Refactor DynamicCardsGen to remove options parameter and simplify card generation logic; update age fetching logic in index.js

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<source srcset="./assets/images/Cards-icons/webp/Java.webp" type="image/webp">
 						<img src="./assets/images/Cards-icons/Java.png" alt="Java logo icon">
 					</picture>
-					<h5 class="experience">4 years, primary language</h5>
+					<h5 class="experience">Four years, primary language</h5>
 				</div>
 				<div class="card loading">
 					<h2 class="title">Spring Boot</h2>
